[package]
name = "xed"
description = "Xenonauts CE save editor"
version = "1.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
aho-corasick = "1.1"
eframe = "0.24"
egui_file = "0.13"
